--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <h2></h2>
-        <div id="displayWord">
+        <div id="displayWord">Find a word
             <!-- word displays here-->
         </div>
         <button onclick="randomWord()">Get a word</button>
