--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <main>
-        <h2></h2>
+        <h1></h1>
         <div id="displayWord">Find a word
             <!-- word displays here-->
         </div>
         <button onclick="randomWord()">Get a word</button>
 
-        <script src="script.js" defer></script>
+        <script src="script.js"></script>
     </main>
 </body>
