extra css added

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <main>
-        <h1></h1>
-        <div id="displayWord">Find a word
+        <h1>Enjoy your word</h1>
+        <div id="displayWord">
             <!-- word displays here-->
         </div>
         <button onclick="randomWord()">Get a word</button>
