--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <main>
+        <div class="header">hi</div>
         <h1>Enjoy your word</h1>
         <div id="displayWord">
             <!-- word displays here-->
