--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <main>
         <div class="header">hi</div>
-        <h1>Enjoy your word</h1>
+        <h1>Press the button and enjoy your word!</h1>
         <div id="displayWord">
             <!-- word displays here-->
         </div>
-        <button onclick="randomWord()">Get a word</button>
+        <button id="btn">Get a word</button>
 
         <script src="script.js"></script>
     </main>
