--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="displayWord">
             <!-- word displays here-->
         </div>
-        <button onclick="randomWord">Get a word</button>
+        <button onclick="randomWord()">Get a word</button>
 
         <script src="script.js"></script>
     </main>
